Fix form info block on chromium

--- a/src/components/form/info.astro
+++ b/src/components/form/info.astro
@@ -54,7 +54,7 @@ const icon = style
     padding-left: 1rem;
   }
 
-  .icon-container {
+  .has-icon .icon-container {
     height: 100%;
     display: flex;
     flex-direction: column;
